Navigation & Pics & Roles

--- a/365_Portal/Web.config
+++ b/365_Portal/Web.config
@@ -4,22 +4,31 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+
+
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  
+
 
   <connectionStrings>
     <add name="DefaultConnection1" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-365_Portal-20191012051758.mdf;Initial Catalog=aspnet-365_Portal-20191012051758;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="365LifeConnection" connectionString="server=52.168.24.78;Port=3306;database=365app;uid=sa;password=Test@1234;" />     
+    <add name="365LifeConnection" connectionString="server=52.168.24.78;Port=3306;database=365app;uid=sa;password=Test@1234;" />
   </connectionStrings>
   <appSettings>
     <add key="dbPasswordSalt" value="SUqfy3IHGUG4YVM/aO7lXWIKz4FAP18spNMiFdiGKNQ=" />
     <add key="dbPasswordHashed" value="hdc5ZLZ4sE75e3OqbgR+PqXtr1Y=" />
     <add key="TokenURL" value="http://localhost:54500" />
-  
+
   </appSettings>
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="50000000"/>
+      </webServices>
+    </scripting>
+  </system.web.extensions>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
