--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -509,6 +509,7 @@
     <Content Include="Asset\fonts\gijgo-material.svg" />
     <Content Include="Asset\images\close-button.png" />
     <Content Include="Asset\images\contract-file.png" />
+    <Content Include="Asset\images\didnt-like-icon.svg" />
     <Content Include="Asset\images\diploma.png" />
     <Content Include="Asset\images\employee-illustration.svg" />
     <Content Include="Asset\images\engager-icon.svg" />
@@ -516,7 +517,10 @@
     <Content Include="Asset\images\flash-card.png" />
     <Content Include="Asset\images\flashcard-icon.svg" />
     <Content Include="Asset\images\giftbox.png" />
+    <Content Include="Asset\images\like-icon.svg" />
     <Content Include="Asset\images\logo.svg" />
+    <Content Include="Asset\images\love-icon.svg" />
+    <Content Include="Asset\images\meh-icon.svg" />
     <Content Include="Asset\images\next-flashcard-icon.svg" />
     <Content Include="Asset\images\next-pdf-icon.svg" />
     <Content Include="Asset\images\next-video-icon.svg" />
