--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -763,6 +763,7 @@
     <Folder Include="Files\CompLogo\" />
     <Folder Include="Files\Others\" />
     <Folder Include="Files\ProfilePic\" />
+    <Folder Include="Files\Survey\" />
     <Folder Include="Views\Modules\" />
     <Folder Include="Views\User\" />
   </ItemGroup>
