--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -400,6 +400,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ModuleController.cs" />
     <Compile Include="Controllers\ContentController.cs" />
+    <Compile Include="Controllers\QuizController.cs" />
     <Compile Include="Controllers\TrainningController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -765,6 +766,7 @@
     <Folder Include="Files\ProfilePic\" />
     <Folder Include="Files\Survey\" />
     <Folder Include="Views\Modules\" />
+    <Folder Include="Views\Quiz\" />
     <Folder Include="Views\User\" />
   </ItemGroup>
   <ItemGroup>
