--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -356,6 +356,7 @@
     <Compile Include="Code\BL\ContentBL.cs" />
     <Compile Include="Code\BL\FlashcardBL.cs" />
     <Compile Include="Code\BL\ModulesBL.cs" />
+    <Compile Include="Code\BL\QuizBL.cs" />
     <Compile Include="Code\BL\SurveyBL.cs" />
     <Compile Include="Code\BL\TopicsBL.cs" />
     <Compile Include="Code\BL\TrainningBL.cs" />
@@ -371,6 +372,7 @@
     <Compile Include="Code\DAL\ContentDAL.cs" />
     <Compile Include="Code\DAL\FlashcardDAL.cs" />
     <Compile Include="Code\DAL\ModuleDAL.cs" />
+    <Compile Include="Code\DAL\QuizDAL.cs" />
     <Compile Include="Code\DAL\SurveyDAL.cs" />
     <Compile Include="Code\DAL\TopicsDAL.cs" />
     <Compile Include="Code\DAL\TrainningDAL.cs" />
