--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -631,12 +631,23 @@
     <Content Include="INCLUDES\Asset\data\bunny.mp4" />
     <Content Include="INCLUDES\Asset\fonts\gijgo-material.svg" />
     <Content Include="INCLUDES\Asset\images\arrow-down-sign-to-navigate.png" />
-    <Content Include="INCLUDES\Asset\images\comment.png" />
-    <Content Include="INCLUDES\Asset\images\dashboard.png" />
+    <Content Include="INCLUDES\Asset\images\college-graduation.png" />
+    <Content Include="INCLUDES\Asset\images\combined-shape.png" />
+    <Content Include="INCLUDES\Asset\images\diamond.png" />
+    <Content Include="INCLUDES\Asset\images\comments.png" />
+    <Content Include="INCLUDES\Asset\images\notifications.png" />
+    <Content Include="INCLUDES\Asset\images\mask-group-bottom-green.png" />
+    <Content Include="INCLUDES\Asset\images\mask-group-bottom-orange.png" />
+    <Content Include="INCLUDES\Asset\images\mask-group-bottom-purple.png" />
+    <Content Include="INCLUDES\Asset\images\mask-group-bottom-red.png" />
+    <Content Include="INCLUDES\Asset\images\mask-group-top-green.png" />
+    <Content Include="INCLUDES\Asset\images\mask-group-top-orange.png" />
+    <Content Include="INCLUDES\Asset\images\mask-group-top-purple.png" />
+    <Content Include="INCLUDES\Asset\images\mask-group-top-red.png" />
     <Content Include="INCLUDES\Asset\images\menu.png" />
-    <Content Include="INCLUDES\Asset\images\notification.png" />
     <Content Include="INCLUDES\Asset\images\profile.png" />
-    <Content Include="INCLUDES\Asset\images\united-states.png" />
+    <Content Include="INCLUDES\Asset\images\us.png" />
+    <Content Include="INCLUDES\Asset\images\user.png" />
     <Content Include="INCLUDES\Asset\js\360.js" />
     <Content Include="INCLUDES\Asset\js\all.js" />
     <Content Include="INCLUDES\Asset\js\bootstrap.min.js" />
