Content File upload with form

--- a/365_Portal/Web.config
+++ b/365_Portal/Web.config
@@ -20,6 +20,8 @@
     <add key="dbPasswordSalt" value="SUqfy3IHGUG4YVM/aO7lXWIKz4FAP18spNMiFdiGKNQ=" />
     <add key="dbPasswordHashed" value="hdc5ZLZ4sE75e3OqbgR+PqXtr1Y=" />
     <add key="TokenURL" value="http://localhost:54500" />
+    
+  <add key="FileUploadSize" value="5000000" />
 
   </appSettings>
   <system.web.extensions>
