--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -640,11 +640,13 @@
     <Content Include="INCLUDES\Asset\customer\default.js" />
     <Content Include="INCLUDES\Asset\data\bunny.mp4" />
     <Content Include="INCLUDES\Asset\fonts\gijgo-material.svg" />
+    <Content Include="INCLUDES\Asset\images\add-people.png" />
     <Content Include="INCLUDES\Asset\images\arrow-down-sign-to-navigate.png" />
     <Content Include="INCLUDES\Asset\images\college-graduation.png" />
     <Content Include="INCLUDES\Asset\images\combined-shape.png" />
     <Content Include="INCLUDES\Asset\images\diamond.png" />
     <Content Include="INCLUDES\Asset\images\comments.png" />
+    <Content Include="INCLUDES\Asset\images\learning-library.png" />
     <Content Include="INCLUDES\Asset\images\notifications.png" />
     <Content Include="INCLUDES\Asset\images\mask-group-bottom-green.png" />
     <Content Include="INCLUDES\Asset\images\mask-group-bottom-orange.png" />
@@ -656,6 +658,7 @@
     <Content Include="INCLUDES\Asset\images\mask-group-top-red.png" />
     <Content Include="INCLUDES\Asset\images\menu.png" />
     <Content Include="INCLUDES\Asset\images\profile.png" />
+    <Content Include="INCLUDES\Asset\images\settings.png" />
     <Content Include="INCLUDES\Asset\images\us.png" />
     <Content Include="INCLUDES\Asset\images\user.png" />
     <Content Include="INCLUDES\Asset\js\360.js" />
