--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -258,6 +258,7 @@
     <Compile Include="Code\BL\ContentBL.cs" />
     <Compile Include="Code\BL\FlashcardBL.cs" />
     <Compile Include="Code\BL\ModulesBL.cs" />
+    <Compile Include="Code\BL\OrganizationBL.cs" />
     <Compile Include="Code\BL\QuizBL.cs" />
     <Compile Include="Code\BL\SurveyBL.cs" />
     <Compile Include="Code\BL\TopicsBL.cs" />
@@ -274,6 +275,7 @@
     <Compile Include="Code\DAL\ContentDAL.cs" />
     <Compile Include="Code\DAL\FlashcardDAL.cs" />
     <Compile Include="Code\DAL\ModuleDAL.cs" />
+    <Compile Include="Code\DAL\OrganizationDAL.cs" />
     <Compile Include="Code\DAL\QuizDAL.cs" />
     <Compile Include="Code\DAL\SurveyDAL.cs" />
     <Compile Include="Code\DAL\TopicsDAL.cs" />
@@ -290,6 +292,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ModuleController.cs" />
     <Compile Include="Controllers\ContentController.cs" />
+    <Compile Include="Controllers\OrganizationController.cs" />
     <Compile Include="Controllers\QuizController.cs" />
     <Compile Include="Controllers\TrainningController.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -299,12 +302,14 @@
     </Compile>
     <Compile Include="INCLUDES\360Life.Master.cs">
       <DependentUpon>360Life.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="INCLUDES\360Life.Master.designer.cs">
       <DependentUpon>360Life.Master</DependentUpon>
     </Compile>
     <Compile Include="INCLUDES\Dashboard.aspx.cs">
       <DependentUpon>Dashboard.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="INCLUDES\Dashboard.aspx.designer.cs">
       <DependentUpon>Dashboard.aspx</DependentUpon>
@@ -427,6 +432,13 @@
     </Compile>
     <Compile Include="t\Modules.aspx.designer.cs">
       <DependentUpon>Modules.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="t\Organization.aspx.cs">
+      <DependentUpon>Organization.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="t\Organization.aspx.designer.cs">
+      <DependentUpon>Organization.aspx</DependentUpon>
     </Compile>
     <Compile Include="t\Profile.aspx.cs">
       <DependentUpon>Profile.aspx</DependentUpon>
@@ -763,6 +775,7 @@
     <Content Include="t\flashcards.aspx" />
     <Content Include="t\Groups.aspx" />
     <Content Include="t\Modules.aspx" />
+    <Content Include="t\Organization.aspx" />
     <Content Include="t\Profile.aspx" />
     <Content Include="t\quiz.aspx" />
     <Content Include="t\Settings.aspx" />
@@ -796,6 +809,7 @@
     <Folder Include="Files\ProfilePic\" />
     <Folder Include="Files\Survey\" />
     <Folder Include="Views\Modules\" />
+    <Folder Include="Views\Organization\" />
     <Folder Include="Views\Quiz\" />
     <Folder Include="Views\User\" />
   </ItemGroup>
