--- a/365_Portal/packages.config
+++ b/365_Portal/packages.config
@@ -47,11 +47,13 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="MySql.Data" version="6.10.9" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Sendgrid" version="9.12.0" targetFramework="net452" />
   <package id="SendGrid.Net40" version="5.1.0.0" targetFramework="net452" />
   <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
   <package id="System.Threading" version="4.3.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
