--- a/365_Portal/Web.config
+++ b/365_Portal/Web.config
@@ -20,6 +20,7 @@
     <add key="dbPasswordSalt" value="SUqfy3IHGUG4YVM/aO7lXWIKz4FAP18spNMiFdiGKNQ=" />
     <add key="dbPasswordHashed" value="hdc5ZLZ4sE75e3OqbgR+PqXtr1Y=" />
     <add key="TokenURL" value="http://localhost:54500" />
+    <add key="SendGridEmailKey" value="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" />
     
   <add key="FileUploadSize" value="1073741824" />
 
