--- a/365_Portal/Web.config
+++ b/365_Portal/Web.config
@@ -22,6 +22,8 @@
     <add key="TokenURL" value="http://localhost:54500" />
     <add key="SendGridEmailKey" value="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" />
     
+    <add key="FromMailName" value="365 Staff App" />
+    
   <add key="FileUploadSize" value="1073741824" />
 
   </appSettings>
