Email Key Updated..

--- a/365_Portal/Web.config
+++ b/365_Portal/Web.config
@@ -21,7 +21,7 @@
     <add key="dbPasswordHashed" value="hdc5ZLZ4sE75e3OqbgR+PqXtr1Y=" />
     <add key="TokenURL" value="http://localhost:54500" />
     <!--<add key="SendGridEmailKey" value="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" />--><!--First Key-->
-    <add key="SendGridEmailKey" value="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" />
+    <add key="SendGridEmailKey" value="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" />
     
     <add key="FromMailName" value="365 Staff App" />
     
