--- a/365_Portal/Web.config
+++ b/365_Portal/Web.config
@@ -38,7 +38,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" maxRequestLength="1048576" executionTimeout="3600" />
+    <httpRuntime targetFramework="4.5.2" requestValidationMode="2.0" maxRequestLength="1048576" executionTimeout="3600" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
