--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -708,6 +708,7 @@
     <Content Include="INCLUDES\Asset\js\gijgo.min.js" />
     <Content Include="INCLUDES\Asset\js\jquery.dataTables.min.js" />
     <Content Include="INCLUDES\Asset\js\jquery.min.js" />
+    <Content Include="INCLUDES\Asset\js\jquery.tablednd.js" />
     <Content Include="INCLUDES\Asset\js\moment.js" />
     <Content Include="INCLUDES\Asset\js\popper.min.js" />
     <Content Include="INCLUDES\Asset\js\select2.min.js" />
