--- a/365_Portal/Web.config
+++ b/365_Portal/Web.config
@@ -24,6 +24,8 @@
     <add key="SendGridEmailKey" value="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" />
     
     <add key="FromMailName" value="365 Staff App" />
+    <add key="ResetPasswordLink" value="http://localhost:54500/ResetPassword.aspx?Token=" />
+    <add key="BaseTinyURL" value="http://tinyurl.com/api-create.php?url=" />
     
   <add key="FileUploadSize" value="1073741824" />
 
