changes of Reset Password & solved issue of multiple admin in organization page

--- a/365_Portal/Web.config
+++ b/365_Portal/Web.config
@@ -25,6 +25,7 @@
     
     <add key="FromMailName" value="365 Staff App" />
     <add key="ResetPasswordLink" value="http://localhost:54500/ResetPassword.aspx?Token=" />
+    <!--<add key="ResetPasswordLink" value="http://52.168.24.78/ResetPassword.aspx?Token=" />-->
     <add key="BaseTinyURL" value="http://tinyurl.com/api-create.php?url=" />
     
   <add key="FileUploadSize" value="1073741824" />
