Added few parameter while creating user

--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,4 @@ ModelManifest.xml
 /365_Portal/validation.aspx.cs
 /365_Portal/validation.aspx.designer.cs
 /365_Portal/Files/Content
+/365_Portal/Google
